--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "jquery": "~2.1.1"
   }
 }
